--- a/.gitignore
+++ b/.gitignore
@@ -78,7 +78,8 @@ pickle-email-*.html
 .env
 .powenv
 
-dev_notes.txt
-provisioning_instructions.txt
+/dev_notes.txt
+/provisioning_instructions.txt
+/config/deploy*.rb
 
 
