Corrected a few instances of wildcard usage

--- a/.gitignore
+++ b/.gitignore
@@ -27,7 +27,7 @@ db/*.sqlite3
 /tmp/*
 
 # various artifacts
-**.war
+*.war
 *.rbc
 *.sassc
 .redcar/
@@ -62,7 +62,7 @@ pickle-email-*.html
 # Here are some files you may want to ignore globally:
 
 # scm revert files
-**.orig
+*.orig
 
 # Mac finder artifacts
 .DS_Store
@@ -77,7 +77,7 @@ pickle-email-*.html
 /*.tmproj
 
 # vim artifacts
-**.swp
+*.swp
 
 # Environment files that may contain sensitive data
 .env
