--- a/deploy/playbooks/deploy.yml
+++ b/deploy/playbooks/deploy.yml
@@ -8,10 +8,11 @@
   roles:
     - geerlingguy.passenger
 
-  tasks:
-    - name: Ensure demo application is at correct release.
+  environment:
+    {{app_env}}
+  
       git:
-        repo: https://github.com/geerlingguy/demo-rails-app.git
+        repo: https://github.com/jshock1/kserver.git 
         version: "{{ app_version }}"
         dest: "{{ app_directory }}"
         accept_hostkey: true
@@ -34,24 +35,51 @@
       notify: restart nginx
 
     - name: Check if database exists.
-      stat: "path={{ app_directory }}/db/{{ app_environment.RAILS_ENV }}.sqlite3"
+      shell: "psql -lqt | cut -d \| -f 1 | grep -qw {{db_name}}"
       register: app_db_exists
 
     - name: Create database.
       shell: "bundle exec rake db:create chdir={{ app_directory }}"
-      when: app_db_exists.stat.exists == false
+      shell: "{{ item }} chdir={{ app_directory }}"
+      with_items:
+        - bundle exec rake db:create
+        - bundle exec rake db:schema:load
+        - bundle exec rake assets:precompile
+      when: app_db_exists == false
       notify: restart nginx
 
-    - name: Perform deployment-related rake tasks.
+    - name: Perform deployment-related rake tasks for Production.
+
       shell: "{{ item }} chdir={{ app_directory }}"
       with_items:
         - bundle exec rake db:migrate
         - bundle exec rake assets:precompile
-      environment: "{{ app_environment }}"
-      when: app_updated.changed == true
+      when: 
+        - app_updated.changed == true
+        - app_mode == "production"
       notify: restart nginx
 
-    - name: Ensure demo application has correct user for files.
+    - name: Perform deployment-related rake tasks for Test.
+      shell: "{{ item }} chdir={{ app_directory }}"
+      with_items:
+        - bundle exec rake db:drop
+        - bundle exec rake db:setup
+      when: 
+        - app_updated.changed == true
+        - app_mode == "test"
+      notify: restart nginx
+
+    - name: Perform deployment-related rake tasks for Development.
+      shell: "{{ item }} chdir={{ app_directory }}"
+      with_items:
+        - bundle exec rake db:migrate
+        - bundle exec rake db:seed
+      when: 
+        - app_updated.changed == true
+        - app_mode == "development"
+      notify: restart nginx
+
+    - name: Ensure app has correct files owner and group.
       file:
         path: "{{ app_directory }}"
         state: directory
