--- a/deploy/Vagrantfile
+++ b/deploy/Vagrantfile
@@ -3,16 +3,35 @@
 
 Vagrant.configure(2) do |config|
   config.vm.box = "geerlingguy/ubuntu1604"
+  if Vagrant.has_plugin?("vagrant-cachier")
+    # Configure cached packages to be shared between instances of the same base box.
+    # More info on http://fgrehm.viewdocs.io/vagrant-cachier/usage
+    config.cache.scope = :box
+
+    # OPTIONAL: If you are using VirtualBox, you might want to use that to enable
+    # NFS for shared folders. This is also very useful for vagrant-libvirt if you
+    # want bi-directional sync
+    config.cache.synced_folder_opts = {
+      type: :nfs,
+      # The nolock option can be useful for an NFSv3 client that wants to avoid the
+      # NLM sideband protocol. Without this option, apt-get might hang if it tries
+      # to lock files needed for /var/cache/* operations. All of this can be avoided
+      # by using NFSv4 everywhere. Please note that the tcp option is not the default.
+      mount_options: ['rw', 'vers=3', 'tcp', 'nolock']
+    }
+    # For more information please check http://docs.vagrantup.com/v2/synced-folders/basic_usage.html
+  end
+
   config.ssh.insert_key = false
 
   config.vm.provider "virtualbox" do |v|
-    v.name = "kserver"
+    v.name = "kokko-app"
     v.memory = 1024
     v.cpus = 2
   end
 
-  config.vm.define :kserver
-  config.vm.hostname = "kserver"
+  config.vm.define :kokko-app
+  config.vm.hostname = "kokko-app"
   config.vm.network :private_network, ip: "192.168.33.7"
 
   config.vm.provision "ansible" do |ansible|
