--- a/deploy/playbooks/vars.yml
+++ b/deploy/playbooks/vars.yml
@@ -11,14 +11,14 @@ app_secrets:
 app_mode: production
 db_name: kokko_{{app_mode}}
 app_env:
-  RAILS_ENV: {{app_mode}}
+  RAILS_ENV: "{{app_mode}}"
 db_user: kokko_db_user
 db_user_password: dbpass32
 
 # Variables for Passenger and Nginx.
 passenger_server_name: 0.0.0.0
 passenger_app_root: /opt/kserver/public
-passenger_app_env: {{app_mode}}
+passenger_app_env: "{{app_mode}}"
 passenger_ruby: /usr/local/bin/ruby
 
 # Variables for Ruby installation.
@@ -31,12 +31,13 @@ nodejs_install_npm_user: root
 
 # Create db_user used by ruby to access db
 postgresql_users:
-  - name: {{db_user}}
-    password: {{db_user_password}}
-    role_attr_flags: CREATE_DB LOGIN
+  - name: "{{db_user}}"
+    password: "{{db_user_password}}"
+    role_attr_flags: CREATEDB,LOGIN
 
 # Create database used by rails app
 postgresql_databases: 
-  - name: {{db_name}}
-    owner: {{db_user}}
+  - name: "{{db_name}}"
 
+
+no_log: false
