--- a/deploy/playbooks/vars.yml
+++ b/deploy/playbooks/vars.yml
@@ -26,6 +26,8 @@ ruby_install_from_source: true
 ruby_download_url: http://cache.ruby-lang.org/pub/ruby/2.2/ruby-2.2.10.tar.gz
 ruby_version: 2.2.10
 
+rails_version: 4.2.6
+
 # Variables for Node.js installation.
 nodejs_install_npm_user: root
 
