--- a/deploy/Vagrantfile
+++ b/deploy/Vagrantfile
@@ -3,7 +3,7 @@
 
 Vagrant.configure(2) do |config|
   config.vm.box = "geerlingguy/ubuntu1604"
-  config.vm.synced_folder "../", "/opt/kserver", create: true
+  config.vm.synced_folder "./kokko_app", "/opt/kserver", create: true
   config.ssh.insert_key = false
 
   config.vm.provider "virtualbox" do |v|
