--- a/deploy/playbooks/vars.yml
+++ b/deploy/playbooks/vars.yml
@@ -1,6 +1,6 @@
 ---
 # Variables for our app.
-app_version: 0.2.8
+app_version: v0.2.8
 app_directory: /opt/kserver
 # OS user created by NGINX or APACHE
 app_user: www-data
@@ -16,7 +16,7 @@ app_name: kokko
 
 # Set in inventory file. Required for all inventories.
 # Can be one of: development, test, or production.
-app_mode: "{{ hostvars['rails'].app_mode }}"
+# app_mode: "{{ hostvars['rails'].app_mode }}"
 
 db_name: kokko_{{app_mode}}
 app_env:
