--- a/deploy/playbooks/deploy.yml
+++ b/deploy/playbooks/deploy.yml
@@ -16,7 +16,7 @@
   tasks: 
     - git:
         repo: https://github.com/jshock1/kserver.git 
-        version: "{{ app_version }}"
+        # version: "{{ app_version }}"
         dest: "{{ app_directory }}"
         accept_hostkey: true
         force: yes
