--- a/deploy/playbooks/deploy.yml
+++ b/deploy/playbooks/deploy.yml
@@ -15,8 +15,7 @@
 
   tasks: 
     - git:
-        repo: https://github.com/jshock1/kserver.git 
-        # version: "{{ app_version }}"
+      repo: "git@github.com:JerryShockley/kserver.git"
         dest: "{{ app_directory }}"
         accept_hostkey: true
         force: yes
