--- a/deploy/playbooks/deploy.yml
+++ b/deploy/playbooks/deploy.yml
@@ -14,10 +14,10 @@
 
   tasks: 
     - git:
-        repo: https://github.com/JerryShockley/kserver.git
-        # version: "{{ app_version }}"
+        repo: 'https://github.com/JerryShockley/kserver.git/'
         dest: "{{ app_directory }}"
         accept_hostkey: true
+        depth: 1
         force: yes
       register: app_updated
       notify: restart nginx
