--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@
 /deploy/kokko_app/
 
 /.vagrant/
+.byebug_history
 
 *.retry
 # bundler state
@@ -26,6 +27,8 @@ db/*.sqlite3
 /db/*.sqlite3-journal
 /log/*
 /tmp/*
+config/database.yml
+config/secrets.yml
 
 # various artifacts
 *.war
